# RsquirrelLSP

./: .gitignore  Cargo.toml  bench.bat  build.bat  test.bat
.github/workflows/: northstar.yml
AST Generator/TokenIdentifier/: Cargo.toml
AST Generator/TokenIdentifier/src/: lib.rs
AST Generator/analyser/: Cargo.toml  squirrelFile.nut
AST Generator/analyser/src/: lib.rs  load_order.rs  scope_tests.rs  single_file.rs
AST Generator/analysis_common/: Cargo.toml
AST Generator/analysis_common/src/: lib.rs  modjson.rs  spanning_search.rs  variable.rs
AST Generator/parser/: Cargo.toml
AST Generator/parser/src/: ast.rs  error.rs  external_resources.rs  grammar.rs  lib.rs  visitor.rs
AST Generator/parser/src/grammar_tests/: assignment_tests.rs  declaration_tests.rs  expression_tests.rs  filescope_tests.rs  for_tests.rs  if_tests.rs  integration_tests.rs  mod.rs  struct_tests.rs  switch_tests.rs
Analyser/: Cargo.toml
Analyser/src/: comp_tree.rs  lib.rs  state_resolver.rs
E2E/: Cargo.toml
E2E/src/: MemTests.rs  RefactorTest.rs  ValidSets.rs  main.rs
Extension/RSqLSP/: CHANGELOG.md  README.md  package-lock.json  package.json
Extension/RSqLSP/src/: extension.ts
LSP/: Cargo.toml
LSP/src/: main.rs
Preprocessor/: .gitignore  a.cpp
Preprocessor/ConfigAnalyser/: Cargo.toml  parser.drawio
Preprocessor/ConfigAnalyser/src/: lib.rs  sq_file_variant.rs
Preprocessor/ConfigAnalyser/src/variant_parser/: mod.rs  traversal.rs  variant.rs
Preprocessor/ConfigAnalyser/src/variant_parser/parse/: mod.rs  parse_element.rs  parse_literal.rs
Preprocessor/ConfigPredictor/: Cargo.toml
Preprocessor/ConfigPredictor/src/: lib.rs  state.rs
Preprocessor/Parser/: Cargo.toml
Preprocessor/Parser/src/: ast.rs  condition.rs  grammar.rs  lib.rs
TestSets/InvalidStructure/ManyVariants/: mod.json
TestSets/InvalidStructure/ManyVariants/8Global/mod/scripts/vscripts/: Defines1.gnut
TestSets/InvalidStructure/ManyVariants/mod/scripts/vscripts/: firstFile.gnut
TestSets/RealSets/Flipside/: mod.json  readme
TestSets/ValidStructure/8Global/: mod.json
TestSets/ValidStructure/8Global/mod/scripts/vscripts/: Calls.gnut  Defines5.gnut  Defines7.gnut
TestSets/ValidStructure/ManyVariants/mod/scripts/vscripts/: firstFile.gnut
TestSets/ValidStructure/complex_external/: externals.json  mod.json  readme
TestSets/ValidStructure/complex_external/mod/scripts/vscripts/: DefinesGlobal.gnut  DefinesGlobalNotMP.gnut  LastFile.gnut  SecondFile.gnut
TestSets/ValidStructure/noexternal/: mod.json
TestSets/ValidStructure/noexternal/mod/scripts/vscripts/: LastFile.gnut  SecondFile.gnut  firstFile.gnut
common/: Cargo.toml
common/src/: lib.rs
rson_parse/: Cargo.toml
rson_parse/src/: lib.rs  rson.rs
