[package]
name = "analysis_runner"
version = "0.1.0"
edition = "2021"


[lib]
name = "analysis_runner"
path = "src/lib.rs" 


[dependencies]
ConfigPredictor = { path = "../Preprocessor/ConfigPredictor" }
PreprocessorParser = {path = "../Preprocessor/Parser"}
common = { path = "../common" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
json-spanned-value = "0.2.2"
rayon = "1.10.0"
indexmap = "2.9.0"
downcast-rs = "2.0.1"
