[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

[features]
timed = ["ASTAnalyser/timed", "common/timed"]
dhat-heap = []
detailed = []

[dependencies]
ConfigAnalyser = {path = "../Preprocessor/ConfigAnalyser"}
ASTParser = {path = "../AST Generator/parser"}
TokenIdentifier = { path = "../AST Generator/TokenIdentifier" }
ASTAnalyser = { path = "../AST Generator/analyser" }
analysis_common = { path = "../AST Generator/analysis_common" }
serde = { version = "1.0.219", features = ["derive"] }
common = { path = "../common" }
serde_json = "1.0.140"
rayon = "1.10.0"
better-panic = "0.3.0"
dhat = "0.3.3"
