[package]
name = "ASTAnalyser"
version = "0.1.0"
edition = "2021"

[lib]
name = "ASTAnalyser"
path = "src/lib.rs" 

[features]
timed = []

[dependencies]
analysis_common = { path = "../analysis_common" }
ConfigAnalyser = {path = "../../Preprocessor/ConfigAnalyser"}
PreprocessorParser = {path = "../../Preprocessor/Parser"}
ASTParser = {path = "../parser"}
TokenIdentifier = { path = "../TokenIdentifier" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
json-spanned-value = "0.2.2"
common = { path = "../../common" }
rayon = "1.10.0"
