[package]
name = "analysis_common"
version = "0.1.0"
edition = "2021"

[lib]
name = "analysis_common"
path = "src/lib.rs" 


[dependencies]
ConfigAnalyser = {path = "../../Preprocessor/ConfigAnalyser"}
ConfigPredictor = { path = "../../Preprocessor/ConfigPredictor" }
PreprocessorParser = {path = "../../Preprocessor/Parser"}
ASTParser = {path = "../parser"}
analysis_runner = {path = "../../Analyser"}
common = { path = "../../common" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
json-spanned-value = "0.2.2"
peg = "0.8.4"